# mlcg

./: .gitignore  Bonded-Graph.ipynb  LICENSE  README.md  README.rst  codecov.yml  pyproject.toml  requirements.txt  setup.py  test.py
.circleci/: Dockerfile  Dockerfile_CUDA  README.md  config.yml
.github/: CODEOWNERS
.github/workflows/: codecov.yml  documentation.yml  lint.yaml
docs/: .buildinfo  autodoc.html  bibliography.html  coarse_graining.html  data.html  datasets.html  genindex.html  geometry.html  index.html  models.html  neighbor_list.html  objects.inv  priors.html  py-modindex.html  search.html  searchindex.js  simulation.html  training.html
docs/.doctrees/: autodoc.doctree  bibliography.doctree  coarse_graining.doctree  data.doctree  datasets.doctree  environment.pickle  geometry.doctree  index.doctree  models.doctree  neighbor_list.doctree  priors.doctree  simulation.doctree  training.doctree
docs/_modules/: index.html
docs/_sources/: autodoc.rst.txt  data.rst.txt  datasets.rst.txt  geometry.rst.txt  index.rst.txt  models.rst.txt  neighbor_list.rst.txt  priors.rst.txt
docs/dev/: dev.html  doc.html
docs/source/: autodoc.rst  bibliography.rst  conf.py  (+10 more)
examples/: Building_A_Coarse_Grain_Model.ipynb  README.md  langevin.yaml  train_schnet.yaml
mlcg/: utils.py
opt_radius/: LICENSE  MANIFEST.in  README.md  TODO  radius.cu  radius.py  setup.py  test_radius.py  utils.py
scripts/: mlcg-combine_model.py  mlcg-extract_model.py  mlcg-nvt_langevin.py  mlcg-nvt_pt_langevin.py  mlcg-train-regularized.py  mlcg-train.py  mlcg-train_h5.py  train.py
(+205 files in other folders)
