[build-system]
requires = ["setuptools", "wheel", "ninja"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = ['py38', 'py39']
include = '\.pyi?$'
extend-exclude = '''
/(

)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "mlcg",
]